--- a/src/Ofl.YouTube/Ofl.YouTube.csproj
+++ b/src/Ofl.YouTube/Ofl.YouTube.csproj
@@ -20,7 +20,7 @@
     <PackageReference Include="Ofl.Net.Http.Abstractions" Version="1.0.5" />
     <PackageReference Include="Ofl.Primitives" Version="1.1.4" />
     <PackageReference Include="Ofl.Threading.Tasks" Version="1.0.2" />
-    <PackageReference Include="Ofl.YouTube.Contracts" Version="1.0.3" />
+    <PackageReference Include="Ofl.YouTube.Abstractions" Version="1.0.2" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.3.0" />
   </ItemGroup>
 
