--- a/src/Ofl.YouTube/Ofl.YouTube.csproj
+++ b/src/Ofl.YouTube/Ofl.YouTube.csproj
@@ -12,16 +12,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="2.1.1" />
     <PackageReference Include="Microsoft.NETCore.Portable.Compatibility" Version="1.0.1" />
     <PackageReference Include="Ofl.Collections" Version="1.0.5" />
-    <PackageReference Include="Ofl.Google" Version="3.0.5" />
+    <PackageReference Include="Ofl.Google" Version="3.0.13" />
     <PackageReference Include="Ofl.Net.Http.Abstractions" Version="1.0.6" />
-    <PackageReference Include="Ofl.Primitives" Version="1.1.5" />
+    <PackageReference Include="Ofl.Net.Http.ApiClient.Json" Version="2.0.7" />
+    <PackageReference Include="Ofl.Primitives" Version="2.0.6" />
     <PackageReference Include="Ofl.Threading.Tasks" Version="2.0.4" />
     <PackageReference Include="Ofl.YouTube.Abstractions" Version="2.0.4" />
-    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.0" />
+    <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.1" />
   </ItemGroup>
 
   <ItemGroup>
