--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,13 @@ environment:
     secure: PNVFwcCuNr+X7SffsiwiVsa/JzVyZqwNJUbeve+Or/EjOwZxbd1CUC0K/5az9jsT    
   GIT_CONFIG_USER_EMAIL:
     secure: yAZjzbVhtfeKof5pGJ/N65IjSffBIJoX5MZIpqbtHkc=
+#--------------------------------------------------
+# Note that the following is custom to this project and
+# needs to be replicated if this file is copy and pasted
+# from Ofl._shared.
+#--------------------------------------------------
+  GOOGLE__APIKEY:
+    secure: m5yvnKtFRUWJS1CeQQVub2aanj5aB4BLn/Y+pyC2PmVbKzdgrPx7FZT3iKWaQP8u
 
 #--------------------------------------------------
 # Branch whitelist
