--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,7 @@ environment:
     secure: PNVFwcCuNr+X7SffsiwiVsa/JzVyZqwNJUbeve+Or/EjOwZxbd1CUC0K/5az9jsT    
   GIT_CONFIG_USER_EMAIL:
     secure: yAZjzbVhtfeKof5pGJ/N65IjSffBIJoX5MZIpqbtHkc=
+
 #--------------------------------------------------
 # Note that the following is custom to this project and
 # needs to be replicated if this file is copy and pasted
@@ -55,8 +56,8 @@ build:
 # Build hooks - before
 #--------------------------------------------------
 before_build:
-# Patch version in csproj
-  - ps: $temp_path = (Get-Item src\$env:APPVEYOR_PROJECT_NAME\$env:APPVEYOR_PROJECT_NAME.csproj).FullName
+# Patch version in directory.build.props
+  - ps: $temp_path = (Get-Item directory.build.props).FullName
   - ps: $temp_csproj = [xml](Get-Content $temp_path)
   - ps: $temp_csproj.Project.PropertyGroup.Version = $temp_csproj.Project.PropertyGroup.Version -replace '\.[0-9]+$', ".$env:APPVEYOR_BUILD_NUMBER"
   - ps: $temp_csproj.Save($temp_path)
@@ -99,7 +100,7 @@ nuget:
 deploy:
   provider: NuGet
   api_key:
-    secure: NkczEiXqPCbJkogq7nWCt00Tno/puiOW7LrjwDyctSP7UQAsV4IkB91iH0IUCYyb
+    secure: WuVzz7rQXKtG8gCcxuBARSPLoFyAed/9ymDhqOPwCSbigHBDRCHPmVv7LKHf8Q5B
   skip_symbols: false
   
 #--------------------------------------------------
