--- a/appveyor.yml
+++ b/appveyor.yml
@@ -65,7 +65,14 @@ before_build:
   - ps: Write-Host "Build version set to - $env:APPVEYOR_BUILD_VERSION"
 # Restore
   - dotnet restore
- 
+    
+#--------------------------------------------------
+# Testing
+#--------------------------------------------------
+test:
+  assemblies:
+    only:
+      - '**\*.Tests.dll' 
 #--------------------------------------------------
 # Build hooks - on_success
 #
