--- a/test/Ofl.Youtube.Extensions.Tests/Ofl.Youtube.Extensions.Tests.csproj
+++ b/test/Ofl.Youtube.Extensions.Tests/Ofl.Youtube.Extensions.Tests.csproj
@@ -1,4 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
