--- a/src/Ofl.YouTube/Ofl.YouTube.csproj
+++ b/src/Ofl.YouTube/Ofl.YouTube.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Description>Functionality for interacting with YouTube APIs.</Description>
     <AssemblyName>Ofl.YouTube</AssemblyName>
     <PackageId>Ofl.YouTube</PackageId>
